--- a/gracias.html
+++ b/gracias.html
@@ -1,73 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="author" content="Leticia Riera">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Desarrollo web y plan de marketing a medida para empresas.">
-    <meta name="keywords" content="html, css, analytics, ads, sitios, diseno, webs, informatica, desarrollo, pymes, empresas">
-    <title>Desarrolo web - Leticia Riera</title>
+    <meta name="description" content="Desarrollo web y plan de marketing a medida para potenciar tu empresas.">
+    <meta name="keywords" content="diseño, diseño web, diseño grafico, marketing digital, social media, cordoba, argentina, e-commerce, ecommerce, inteligencia digital, e-marketing, empresa, agencia, estudio, pymes, negocio, comunicación, comunicacion, asesoramiento, asesores, consultora, consultoria">
+    <title>Desarrolo Web - Marketing Digital</title>
+    <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,600;0,800;0,900;1,200;1,400;1,600;1,800;1,900&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="sass/css/main.css">
-    <script src="js/jquery-3.5.1.slim.min.js"></script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar fixed-top">
-            <img class="navbar-brand" src="images/logo.png" alt="Logo">
+            <a href="#index"><img class="navbar-brand" src="images/logo.png" alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto ">
+              <ul  class="nav navbar-nav mr-auto w-75 pl-5 ml-5  justify-content-center">
                   <li class="nav-item active">
                       <a class="nav-link smooth-scroll" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                   </li>
-                    <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="/#servicios">Servicios</a>
+                    <li class="nav-item ">
+                        <a class="nav-link smooth-scroll" href="index.html#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link smooth-scroll" href="/#perfil">Perfil</a>
+                      <a class="nav-link smooth-scroll" href="index.html#perfil">Perfil</a>
                   </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="/#porfolio">Porfolio</a>
+                        <a class="nav-link smooth-scroll" href="index.html#porfolio">Porfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="/#contacto">Contacto</a>
+                        <a class="nav-link smooth-scroll" href="index.html#contacto">Contacto</a>
                     </li>
+                    
               </ul>
 
             </div>
           </nav>
       </header>
       <main>
-        <!-- Hero -->
-        <section id="index" class="bgimage">
-          <div class="container-fluid">
+        <section class="bgimage">
+          <div class="container">
             <div class="row">
-              <div class="d-flex flex-column pl-sm-2 pl-md-5 pl-lg-5 pt-5 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h1 class="col-md-6 pt-sm-0 pt-md-5">Soluciones Digitales <br>
-                  Desarrollo Web y Marketing</h1>
-                <p class="col-md-6">This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p class="col-md-6"><a hre f="#" class="btn btn-primary btn-large">Learn more »</a></p>
+              <div class="d-flex flex-column pt-5 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h1 class="col-md-6 pt-sm-0 pt-md-5">¡Gracias por escribirnos!</h1>
+                <p class="col-md-6">Nos pondremos en contacto lo antes posible.</p>
               </div>
             </div>
           </div>
         </section>
-        <section class="solutions">
-            <div class="container">
-              <h2 class="iq-fw-8 mb-2 iq-mt-40">¡Gracias por enviar tu mensaje!</h2>  
-            </div>
-        </section>
      </main>
-    <footer>
-        <p>&copy; Copyright 2020 - Leticia Riera</p><br>
-        <p>Todos los derechos reservados</p>    
-    </footer>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap/bootstrap.min.js"></script>
+     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill=" #7c60d5" fill-opacity="1" d="M0,96L80,96C160,96,320,96,480,101.3C640,107,800,117,960,128C1120,139,1280,149,1360,154.7L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+     <footer class="d-flex justify-content-center align-items-center">
+       <div class="container">
+         <div class="row">
+           <div class="col-md-12">
+             <p>&copy; Copyright 2020 - Leticia Riera. Todos los derechos reservados</p>    
+           </div>
+ 
+         </div>
+ 
+       </div>
+     </footer>
+     <script src="js/jquery-3.5.1.min.js"></script>
+     <script src="js/popper.min.js"></script>
+     <script src="js/bootstrap/bootstrap.min.js"></script>
 </body>
 </html>
