--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul  class="nav navbar-nav mr-auto w-100 justify-content-center">
+              <ul  class="nav navbar-nav mr-auto w-75 pl-5 ml-5  justify-content-center">
                   <li class="nav-item active">
                       <a class="nav-link smooth-scroll" href="#index">Inicio<span class="sr-only">(current)</span></a>
                   </li>
@@ -130,84 +130,105 @@
 <!-- Perfil  -->
 <section id="perfil" class="position-relative">
   <div class="container">
-     <div class="row">
+    <div class="row">
       <div class="col-sm-12 text-center">
         <div class="title-area">
           <h2>Perfil</h2>
           <div class="separator separator-danger">♦</div>
           <p class="description">
             El servicio de diseño web mejorará enormemente la presencia de su empresa en el área digital. Combinamos estrategias de marca y las últimas tendencias en UX de sitios web y diseño y programación de UI.
-        </p>
+          </p>
         </div>
       </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 mt-3">
-           <div class="media perfil__margen">
-              <div class="media-body mr-3 text-right float-left">
-                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">HTML 5</a></h5>
-                 <div class="progress">
-                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>90%</strong>
-                  </div>
-                </div>
+
+      <div class="col-sm-12 col-lg-4 mt-lg-5">
+        <div class="media mb-5">
+          <div class="order-lg-2 order-md-1 ml-2 mr-2">
+            <i class="fab fa-html5 icon__servicios"></i>
+          </div>
+          <div class="media-body order-1 text-lg-right text-sm-left text-md-left">
+            <h5 class="mt-0 mb-1 servicios__title"><a href="#">HTML 5</a></h5>
+            <div class="progress">
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>90%</strong>
               </div>
-              <div class="service-shap align-self-center float-right"><i class="fab fa-html5 icon__servicios"></i></i></div>
-           </div>
-           <div class="media perfil__margen">
-              <div class="media-body mr-3 text-right float-left">
-                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">Css</a></h5>
-                 <div class="progress">
-                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>90%</strong>
-                  </div>
-                </div>
-              </div>
-              <div class="service-shap align-self-center float-right"><i class="fab fa-css3-alt icon__servicios"></i></div>
-           </div>
-           <div class="media perfil__margen mb-0">
-              <div class="media-body mr-3 text-right float-left">
-                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">React</a></h5>
-                 <div class="progress">
-                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 75%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>75%</strong>
-                  </div>
-                </div>
-              </div>
-              <div class="service-shap align-self-center float-right"><i class="fab fa-react icon__servicios"></i></div>
-           </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-4 align-self-center  feature-images">
-           <img src="images/herramientas.png" class="img-fluid " alt="image">
+
+        <div class="media mb-5">
+          <div class="order-lg-2 order-md-1 ml-2 mr-2">
+            <i class="fab fa-css3-alt icon__servicios"></i>
+          </div>
+          <div class="media-body order-1 text-lg-right text-sm-left text-md-left">
+            <h5 class="mt-0 mb-1 servicios__title"><a href="#">CSS 3</a></h5>
+            <div class="progress">
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>90%</strong>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 mt-3">
-           <div class="media perfil__margen">
-              <div class="service-shap align-self-center"><i class="fab fa-js-square icon__servicios"></i></div>
-              <div class="media-body ml-3">
-                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">JavaScript</a></h5>
-                 <div class="progress">
-                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 85%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>85%</strong>
-                  </div>
-                </div>
+
+        <div class="media mb-5">
+          <div class="order-lg-2 order-md-1 ml-2 mr-2">
+            <i class="fab fa-react icon__servicios"></i>
+          </div>
+          <div class="media-body order-1 text-lg-right text-sm-left text-md-left">
+            <h5 class="mt-0 mb-1 servicios__title"><a href="#">React</a></h5>
+            <div class="progress">
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 75%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>75%</strong>
               </div>
-           </div>
-           <div class="media perfil__margen">
-              <div class="service-shap align-self-center"><i class="fab fa-wordpress-simple icon__servicios"></i></div>
-              <div class="media-body ml-3">
-                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">Wordpress</a></h5>
-                 <div class="progress">
-                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 95%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>95%</strong>
-                  </div>
-                </div>
-              </div>
-           </div>
-           <div class="media perfil__margen mb-0">
-              <div class="service-shap align-self-center"><i class="fas fa-database icon__servicios"></i></div>
-              <div class="media-body ml-3">
-                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">MySql</a></h5>
-                 <div class="progress">
-                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 85%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>85%</strong>
-                  </div>
-                </div>
-              </div>
-           </div>
+            </div>
+          </div>
         </div>
-     </div>
+      </div>
+
+
+      <div class="col-sm-12 col-md-4 align-self-center  feature-images">
+        <img src="images/herramientas.png" class="img-fluid " alt="image">
+      </div>
+
+      <div class="col-sm-12 col-lg-4 mt-lg-5">
+        <div class="media mb-5">
+          <div class="order-lg-2 ml-2 mr-2">
+            <i class="fab fa-js-square icon__servicios"></i>
+          </div>
+          <div class="media-body  text-sm-left text-md-left">
+            <h5 class="mt-0 mb-1 servicios__title"><a href="#">JavaScript</a></h5>
+            <div class="progress">
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>80%</strong>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="media mb-5">
+          <div class="order-lg-2 ml-2 mr-2">
+            <i class="fab fa-wordpress-simple icon__servicios"></i>
+          </div>
+          <div class="media-body text-sm-left text-md-left">
+            <h5 class="mt-0 mb-1 servicios__title"><a href="#">Wordpress</a></h5>
+            <div class="progress">
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>90%</strong>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="media mb-5">
+          <div class="order-lg-2 ml-2 mr-2">
+            <i class="fas fa-database icon__servicios"></i>
+          </div>
+          <div class="media-body text-sm-left text-md-left">
+            <h5 class="mt-0 mb-1 servicios__title"><a href="#">MySql</a></h5>
+            <div class="progress">
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 85%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>85%</strong>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div> 
+    </div>
   </div>
 </section>
 
@@ -225,7 +246,7 @@
               <div class="col-md-6">
                 <div class="project">
                   <img src="images/project-1.jpg" alt="">
-                  <a class="over-area" href="#enlazarejemplo">
+                  <a class="over-area" rel="noopener" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19">
                     <div class="content">
                       <label class="label label-danger label-fill">Diseño web</label>
                       <h3>Desarrollo Front End</h3>
@@ -238,7 +259,7 @@
               <div class="col-md-6">
                 <div class="project">
                   <img src="images/project-6.jpg" alt="">
-                  <a class="over-area" href="#enlazarejemplo">
+                  <a class="over-area" rel="noopener" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19">
                     <div class="content">
                       <label class="label label-danger label-fill">Marketing</label>
                       <h3>Social Marketing</h3>
@@ -264,7 +285,7 @@
               <div class="col-md-6">
                 <div class="project">
                   <img src="images/project-3.jpg" alt="">
-                  <a class="over-area" href="#enlazarejemplo">
+                  <a class="over-area" rel="noopener" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19">
                     <div class="content">
                       <label class="label label-danger label-fill">Analytics</label>
                       <h3>Google Analytics</h3>
@@ -278,7 +299,7 @@
         </section>
 
         <section  id="contacto">
-          <div class="container mb-5">
+          <div class="container">
             <div class="title-area">
               <h2>Contacto</h2>
               <div class="separator separator-danger">♦</div>
@@ -304,6 +325,7 @@
           </div>
         </section>
      </main>
+     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill=" #7c60d5" fill-opacity="1" d="M0,96L80,96C160,96,320,96,480,101.3C640,107,800,117,960,128C1120,139,1280,149,1360,154.7L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
     <footer class="d-flex justify-content-center align-items-center">
       <div class="container">
         <div class="row">
